monticore-generator/src/test/resources/cocos/invalid/A4035/A4035a.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4035;

grammar A4035a {

  symbol S = "s" Name ";";

  symbolrule S = b:boolean
                 b:String;

}
